# docker-webhooker

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: buildImage.yaml
