[project]
name = "docker-webhooker"
version = "0.1.0"
description = "Simple server which listens for a webhook and starts an accompanying docker container"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["docker>=7.1.0", "fastapi>=0.128.0", "uvicorn>=0.40.0"]

[dependency-groups]
dev = ["ruff>=0.14.0"]

[project.urls]
Homepage = "https://github.com/hollanbm/docker-webhooker"
Repository = "https://github.com/hollanbm/docker-webhooker"
Issues = "https://github.com/hollanbm/docker-webhooker/issues"
